--- a/index.html
+++ b/index.html
@@ -1,66 +1,84 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Shemai Twins - v1.0.2</title>
-    <style>
-        body {
-            background-color: #1c1c1c;
-            color: #ffffff;
-            font-family: 'Segoe UI', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-image: linear-gradient(120deg, #1c1c1c, #2d2d2d);
-        }
-        .logo {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            width: 60px;
-        }
-        .twin-top-left {
-            position: absolute;
-            top: 20px;
-            left: 80px;
-            width: 150px;
-        }
-        .twin-bottom-right {
-            position: absolute;
-            bottom: 20px;
-            right: 20px;
-            width: 150px;
-        }
-        .catchphrase {
-            position: absolute;
-            bottom: 30px;
-            width: 100%;
-            text-align: center;
-            font-size: 1.5em;
-            font-style: italic;
-            color: #d0bfff;
-            font-family: 'Cursive', fantasy;
-        }
-        .chat-button {
-            position: absolute;
-            bottom: 100px;
-            left: 50%;
-            transform: translateX(-50%);
-            padding: 12px 24px;
-            background-color: #8e44ad;
-            color: white;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            font-size: 1em;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shemai Twins</title>
+  <style>
+    body {
+      background: #0a0a0a;
+      color: white;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      overflow-x: hidden;
+    }
+    .container {
+      text-align: center;
+      padding: 20px;
+    }
+    .logo {
+      width: 100px;
+      position: absolute;
+      top: 20px;
+      left: 20px;
+    }
+    .twins {
+      display: flex;
+      justify-content: space-around;
+      margin: 50px auto;
+    }
+    .twins img {
+      width: 200px;
+      cursor: pointer;
+      transition: transform 0.3s;
+    }
+    .twins img:hover {
+      transform: scale(1.1);
+    }
+    .catchphrase {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 24px;
+    }
+    .admin-container {
+      padding: 20px;
+      text-align: center;
+    }
+    #adminPassword {
+      padding: 10px;
+      margin: 20px;
+    }
+  </style>
 </head>
 <body>
-    <img src="images/logo.png" alt="Logo" class="logo">
-    <img src="images/twin1.png" alt="Twin 1" class="twin-top-left">
-    <img src="images/twin2.png" alt="Twin 2" class="twin-bottom-right">
-    <div class="catchphrase">One Leaf. One Vibe. One Growth.</div>
-    <button class="chat-button">Start Chat</button>
+  <div class="container">
+    <img src="images/logo.png" class="logo" alt="Logo">
+    <div class="twins">
+      <img src="images/twin1.png" class="leyma" onclick="startChat('Leyma')">
+      <img src="images/twin2.png" class="liyma" onclick="startChat('Liyma')">
+    </div>
+    <p class="catchphrase">One Leaf. One Vibe. One Growth.</p>
+  </div>
+  <div class="admin-container" style="display: none;">
+    <input type="password" id="adminPassword" placeholder="Enter 'moshede14145?'">
+    <button onclick="unlockAdmin()">Unlock</button>
+    <div id="adminChat"></div>
+  </div>
+  <script>
+    function startChat(twinName) {
+      alert("Chatting with " + twinName + "! (Demo mode)");
+    }
+    function unlockAdmin() {
+      const password = document.getElementById("adminPassword").value;
+      if (password === "moshede14145?") {
+        document.getElementById("adminChat").innerHTML = "<h3>Welcome, Shem! Command your twins here.</h3>";
+      } else {
+        alert("Wrong password!");
+      }
+    }
+    document.addEventListener('contextmenu', (e) => e.preventDefault());
+  </script>
 </body>
 </html>
